<resources>
    <string name="misnapSampleAppLicense" translatable="false">eyJzaWduYXR1cmUiOiIwUVlVY2l5am9NeWs1MVRBYkZTNDBENmVpbEs1cXFiaEFjdUUyWUF6THl0R2VPMHNjUE9hajlXSVA1UWtLajNBWlRWT1ZMUEZLWU03YzlzNHJwbDdGSG1YZWhwOGhPSFNZK3VaWXJhdk1xWGJZZVRveDlFaDJUNXZ0TkxaOExZRVgxWnFVSGpVclpGd1MvbTdtYjlYODFPTU5PLzAyVU9lNk5vUVlSU2tWVldLcFhEMEpRTmJqVHJzRUhUWCthQjNNM0xEUkh6Z2hwRmNyT1lBSjByY1Z4WmoxWG4vdkdCT2d4UGxadW9HNjUwRUVKc2F5Sk1NaXB1SlJOeDE3OWJBNGZmQTgzZi9INzcrcmNwZnNHUkNzR3M4azFOWGFqbVpidUdxS0g2cEpOeEYvMG5MTDNJYmVmQmV3ZDJJdCsvOGJNdzV4OWJ1ODRkb3V6UUJtNnA5VHc9PSIsInNpZ25lZCI6eyJleHBpcnkiOiIyMDMzLTAxLTAxIiwiZmVhdHVyZXMiOlsiYmFyY29kZSIsImRlcG9zaXQiLCJmYWNlIiwiZ2VuZXJpYyIsImlkIiwibmZjIiwib2RjIiwib2RlIiwidm9pY2UiLCJlbSJdLCJhcHBsaWNhdGlvbklkZW50aWZpZXIiOnsiYW5kcm9pZCI6WyJjb20ubWl0ZWtzeXN0ZW1zLm1pc25hcC5zYW1wbGVhcHAiXX0sImdwbyI6IjE2ZCIsIm9yZ2FuaXphdGlvbiI6Ik1pdGVrIFN5c3RlbXMgSW5jLiIsInZlcnNpb24iOiIxLjAifX0=
</string>
    <string name="misnapSampleAppName" translatable="false">MiSnap Sample App</string>
    <string name="misnapSampleAppCameraErrorMessage" translatable="false">Error Initializing Camera</string>
    <string name="misnapSampleAppBackCameraErrorMessage" translatable="false">Error Initializing Back Camera</string>
    <string name="misnapSampleAppFrontCameraErrorMessage" translatable="false">Error Initializing Front Camera</string>
    <string name="misnapSampleAppMicrophoneErrorMessage" translatable="false">Error Initializing Microphone</string>
    <string name="misnapSampleAppAnalysisErrorMessage" translatable="false">Error Analyzing Image</string>
    <string name="misnapSampleAppSettingsErrorMessage" translatable="false">Invalid settings</string>
    <string name="misnapSampleAppCameraPermissionErrorMessage" translatable="false">Error Acquiring Permissions</string>
    <string name="misnapSampleAppCameraPermissionRationaleTitle" translatable="false">Permission reason</string>
    <string name="misnapSampleAppCameraPermissionRationaleMessage" translatable="false">Camera access is required to snap a photo</string>
    <string name="misnapSampleAppAudioRecordPermissionRationaleTitle" translatable="false">Permission reason</string>
    <string name="misnapSampleAppAudioRecordPermissionRationaleMessage" translatable="false">Microphone access is required to record your voice</string>
    <string name="misnapSampleAppNfcDeviceErrorMessage" translatable="false">Device does not support NFC</string>
    <string name="misnapSampleAppNfcDocumentErrorMessage" translatable="false">Document does not support NFC</string>
    <string name="misnapSampleAppNfcSkippedErrorMessage" translatable="false">NFC session skipped</string>
    <string name="misnapSampleAppNfcCredentialsErrorMessage" translatable="false">Invalid NFC credentials</string>
    <string name="misnapSampleAppVoiceSkippedErrorMessage" translatable="false">Voice session skipped</string>
    <string name="misnapSampleAppVoiceExecutionErrorMessage" translatable="false">Error Executing Voice Engines</string>
    <string name="misnapSampleAppVoiceInitializationErrorMessage" translatable="false">Error Initializing Voice Engines</string>
    <string name="misnapSampleAppVoiceInputFormatErrorMessage" translatable="false">Error Unsupported Input Format</string>
    <string name="misnapSampleAppVoiceMicrophoneMutedErrorMessage" translatable="false">Error UnMuting microphone</string>
    <string name="misnapSampleAppVoiceMissingRequirementErrorMessage" translatable="false">Missing Flow / Verification Phrase</string>
    <string name="misnapSampleAppCancelledErrorMessage" translatable="false">Session Cancelled</string>
    <string name="misnapSampleAppCombinedWorkflowCancelledErrorMessage" translatable="false">Session Cancelled</string>
    <string name="misnapSampleAppCombinedWorkflowSkippedStepErrorMessage" translatable="false">Skipped Workflow Step</string>
    <string name="misnapSampleAppCombinedWorkflowLicenseErrorMessage" translatable="false">Invalid license / Feature not licensed</string>
    <string name="misnapSampleAppResultsMibiDataNotFound" translatable="false">Unable to read MiBI from EXIF Tag</string>
    <string name="misnapSampleAppDemoFragmentLabel" translatable="false">Demo Fragment</string>
    <string name="misnapSampleAppResultsFragmentLabel" translatable="false">Results Fragment</string>
    <string name="misnapSampleAppSettingsFragmentLabel" translatable="false">Settings Screen</string>
    <string name="misnapSampleAppResultsUseCaseDriversLicenseTabTitle" translatable="false">Drivers License</string>
    <string name="misnapSampleAppResultsUseCaseIdFrontTabTitle" translatable="false">ID Front</string>
    <string name="misnapSampleAppResultsUseCaseIdBackTabTitle" translatable="false">ID Back</string>
    <string name="misnapSampleAppResultsUseCaseCheckFrontTabTitle" translatable="false">Check Front</string>
    <string name="misnapSampleAppResultsUseCaseCheckBackTabTitle" translatable="false">Check Back</string>
    <string name="misnapSampleAppResultsUseCasePassportTabTitle" translatable="false">Passport</string>
    <string name="misnapSampleAppResultsUseCaseGenericDocumentTabTitle" translatable="false">Generic Document</string>
    <string name="misnapSampleAppResultsUseCaseBarcodeTabTitle" translatable="false">Barcode</string>
    <string name="misnapSampleAppResultsUseCaseFaceTabTitle" translatable="false">Face</string>
    <string name="misnapSampleAppResultsUseCaseNfcTabTitle" translatable="false">NFC</string>
    <string name="misnapSampleAppResultsUseCaseVoiceTabTitle" translatable="false">Voice</string>
    <string name="misnapSampleAppResultsUseCaseUnknownTabTitle" translatable="false">Unknown</string>
    <string name="misnapSampleAppResultsFrameTabTitle" translatable="false">Final Frame</string>
    <string name="misnapSampleAppResultsVideoTabTitle" translatable="false">Recorded Video</string>
    <string name="misnapSampleAppResultsExtractionTabTitle" translatable="false">Extraction Results</string>
    <string name="misnapSampleAppResultsDocumentClassificationTabTitle" translatable="false">Classification Results</string>
    <string name="misnapSampleAppResultsBarcodeTabTitle" translatable="false">Barcode Results</string>
    <string name="misnapSampleAppResultsWarningsTabTitle" translatable="false">Warnings</string>
    <string name="misnapSampleAppResultsMibiTabTitle" translatable="false">MiBi</string>
    <string name="misnapSampleAppResultsErrorTabTitle" translatable="false">Error</string>
    <string name="misnapSampleAppResultsNfcResultsTabTitle" translatable="false">NFC Results</string>
    <string name="misnapSampleAppResultsVoiceAudioTabTitle" translatable="false">Recorded Audio</string>
    <string name="misnapSampleAppResultsVoiceTabTitle" translatable="false">Recording %1$d</string>
    <string name="misnapSampleAppResultsFinalFrameDiskSize" translatable="false">Size on Disk: %1$s</string>
    <string name="misnapSampleAppResultsFinalFrameDimensions" translatable="false">Image Dimensions: %1$s</string>
    <string name="misnapSampleAppResultsMrzDataTitle" translatable="false"><![CDATA[<b>Parsed MRZ</b>]]><![CDATA[<br>]]></string>
    <string name="misnapSampleAppResultsMrzData" translatable="false">
        <![CDATA[<b>Document Number:</b>]]> %1$s <![CDATA[<br>]]>
        <![CDATA[<b>Document Code:</b>]]> %2$s <![CDATA[<br>]]>
        <![CDATA[<b>Issuing Country:</b>]]> %3$s <![CDATA[<br>]]>
        <![CDATA[<b>Date of Birth:</b>]]> %4$s <![CDATA[<br>]]>
        <![CDATA[<b>Date of Expiry:</b>]]> %5$s <![CDATA[<br>]]>
        <![CDATA[<b>Optional Data1:</b>]]> %6$s
    </string>
    <string name="misnapSampleAppResultsDocumentDataTitle" translatable="false"><![CDATA[<br>]]><![CDATA[<b>Extracted Data</b>]]><![CDATA[<br>]]></string>
    <string name="misnapSampleAppDemoStartPassportSessionButtonLabel" translatable="false">Start Passport Session</string>
    <string name="misnapSampleAppDemoStartCheckFrontSessionButtonLabel" translatable="false">Start Check Front Session</string>
    <string name="misnapSampleAppDemoStartCheckBackSessionButtonLabel" translatable="false">Start Check Back Session</string>
    <string name="misnapSampleAppDemoStartBarcodeSessionButtonLabel" translatable="false">Start Barcode Session</string>
    <string name="misnapSampleAppDemoStartFaceSessionButtonLabel" translatable="false">Start Face Session</string>
    <string name="misnapSampleAppDemoStartNfcReadingButtonLabel" translatable="false">Start NFC Reading</string>
    <string name="misnapSampleAppDemoCombinedFlowsLabel" translatable="false">MiSnap Combined Flows</string>
    <string name="misnapSampleAppDemoStartNfcCombinedIdReadingButtonLabel" translatable="false">Start ID Session + NFC</string>
    <string name="misnapSampleAppDemoStartNfcCombinedPassportReadingButtonLabel" translatable="false">Start Passport Session + NFC</string>
    <string name="misnapSampleAppDemoStartNfcCombinedIdFaceReadingButtonLabel" translatable="false">Start ID Session + NFC + Face</string>
    <string name="misnapSampleAppDemoStartCombinedCheckReadingButtonLabel" translatable="false">Start Check Session</string>
    <string name="misnapSampleAppDemoCustomFlowsButtonLabel" translatable="false">Custom Flows</string>
    <string name="misnapSampleAppDemoDocumentFlowsLabel" translatable="false">MiSnap Document Flows</string>
    <string name="misnapSampleAppDemoFaceFlowsLabel" translatable="false">MiSnap Face Flows</string>
    <string name="misnapSampleAppDemoNfcFlowsLabel" translatable="false">MiSnap NFC Flows</string>
    <string name="misnapSampleAppDemoCustomLabel" translatable="false">Custom</string>
    <string name="misnapSampleAppSettingsCameraFacingDirectionLabel" translatable="false">Camera Facing Direction</string>
    <string name="misnapSampleAppSettingsCameraTorchModeLabel" translatable="false">Torch Mode</string>
    <string name="misnapSampleAppSettingsCameraShouldRecordVideoLabel" translatable="false">Should Record Session</string>
    <string name="misnapSampleAppSettingsCameraVideoBitrateLabel" translatable="false">Video Bitrate</string>
    <string name="misnapSampleAppSettingsCameraVideoResolutionLabel" translatable="false">Video Resolution</string>
    <string name="misnapSampleAppSettingsCameraVideoResolutionWidthLabel" translatable="false">Width</string>
    <string name="misnapSampleAppSettingsCameraVideoResolutionHeightLabel" translatable="false">Height</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowTimeoutDurationLabel" translatable="false">Timeout Duration</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowHintDurationLabel" translatable="false">Hint Duration</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowShowBoundingBoxLabel" translatable="false">Show Bounding Box</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowShowGlareBoxLabel" translatable="false">Show Glare Box</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowReviewConditionLabel" translatable="false">Manual Review Condition</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowGuideViewScalePercentageAlignedLabel" translatable="false">GuideView Aligned Scale Percentage</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowGuideViewScalePercentageUnalignedLabel" translatable="false">GuideView Unaligned Scale Percentage</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowShowVignetteLabel" translatable="false">GuideView Show Vignette</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowHintViewShowBackground" translatable="false">HintView Show Background</string>
    <string name="misnapSampleAppSettingsDocumentWorkflowSuccessViewShouldVibrateLabel" translatable="false">SuccessView Should Vibrate</string>
</resources>