<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/cameraSettingsFacingDirectionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/misnapSampleAppSettingsCameraFacingDirectionLabel" />

        <Spinner
            android:id="@+id/cameraSettingsFacingDirectionSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/cameraFacingDirectionsArray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/cameraSettingsTorchModeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/misnapSampleAppLayoutVerticalMargin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraSettingsFacingDirectionContainer">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/misnapSampleAppSettingsCameraTorchModeLabel" />

        <Spinner
            android:id="@+id/cameraSettingsTorchModeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/cameraTorchModesArray" />
    </LinearLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cameraSettingsRecordSessionCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/misnapSampleAppLayoutVerticalMargin"
        android:checked="false"
        android:text="@string/misnapSampleAppSettingsCameraShouldRecordVideoLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraSettingsTorchModeContainer" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cameraSettingsVideoResolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/misnapSampleAppLayoutVerticalMargin"
        android:text="@string/misnapSampleAppSettingsCameraVideoResolutionLabel"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraSettingsRecordSessionCheckbox" />


    <LinearLayout
        android:id="@+id/cameraSettingsVideoResolutionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/misnapSampleAppLayoutVerticalMargin"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraSettingsVideoResolution">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/misnapSampleAppLayoutHorizontalMargin"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cameraSettingsVideoResolutionWidth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/misnapSampleAppSettingsCameraVideoResolutionWidthLabel"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/misnapSampleAppLayoutHorizontalMargin"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cameraSettingsVideoResolutionHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:hint="@string/misnapSampleAppSettingsCameraVideoResolutionHeightLabel"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cameraSettingsVideoBitrateContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/misnapSampleAppLayoutVerticalMargin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cameraSettingsVideoResolutionContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cameraSettingsVideoBitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/misnapSampleAppSettingsCameraVideoBitrateLabel"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:maxLength="7" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
